--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
   "name": "react-redux-list-app",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "author": "John Whiteside",
   "private": true,
+  "main": "index.js",
+  "repository": "https://github.com/johnwhiteside/react-redux-list-app.git",
+  "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --progress --inline --hot"
+  },
   "devDependencies": {
-    "react-scripts": "0.8.5"
+    "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.4.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "eslint": "^3.17.1",
+    "eslint-loader": "^1.6.3",
+    "eslint-plugin-react": "^6.10.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
     "material-ui": "^0.16.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
   }
 }
