--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^5.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
-    "redux-devtools-extension": "^2.13.0"
+    "redux-devtools-extension": "^2.13.0",
+    "reselect": "^2.5.4"
   }
 }
