--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
+    "immutable": "^3.8.2",
     "lodash": "^4.17.4",
     "material-ui": "^0.20.0",
     "react": "^15.5",
